--- a/src/index.html
+++ b/src/index.html
@@ -238,7 +238,7 @@
                 "
               >
                 <tr>
-                  <td style="padding: 0">
+                  <td style="padding: 0 0 20px 0">
                     <table style="width: 100%; border-spacing: 0">
                       <tr style="background-color: #f5f2f7">
                         <td
@@ -388,7 +388,7 @@
                       style="
                   padding-bottom: 5px;
                   font-size: 12px;
-                  color: #66575c;
+                  color: #948A8D;
                 "
               >
                 *Fintepla is indicated for the treatment of seizures associated with Dravet syndrome as an add-on
@@ -399,7 +399,7 @@
                       style="
                   font-size: 12px;
                   line-height: 25px;
-                  color: #66575c;
+                  color: #948A8D;
                   text-align: center;
                 "
               >
@@ -1065,7 +1065,7 @@
                   color: #66575c;
                 "
               >
-                Fintepla(fenfluramine) Prescribing information
+                Fintepla<img src="https://storage.finervision.com/public/emailers/traingle.png" alt="triangle" />(fenfluramine) Prescribing information
                 <a style="color: #63585c;white-space: nowrap;" href="#" target="_blank">Please refer to the full Summary of Product Characteristics (SmPC) before prescribing.</a>
               </p>
             </td>
