amend: client feedback

--- a/src/index.html
+++ b/src/index.html
@@ -171,7 +171,7 @@
                       INTENDED FOR HEALTHCARE PROFESSIONALS IN THE UK ONLY <br/>
                       Prescribing information and adverse event reporting can be found
                       <a
-                              href="https://www.zogenixresources.eu/UK-Fintepla-fenfluramine-Prescribing-Information.pdf"
+                              href="https://orbit-ucb.my.salesforce.com/sfc/p/G0000000hAUA/a/4A000000QD9g/FIjo2tM8.qnZT1t4B87h8J1roHGAQDV5t7lqcuazVDA"
                               target="_blank"
                               class="sub-copy"
                               style="
@@ -350,7 +350,7 @@
                       "
                     >
                       <a
-                        href="https://www.nice.org.uk/guidance/gid-ta10373/documents/html-content-3"
+                        href="https://zogenix.wavecast.io/fintepla-2022/registration?utm_source=Digital&utm_medium=Email&utm_campaign=Register_interest"
                         target="_blank"
                         class="register-btn"
                         style="
@@ -364,8 +364,8 @@
                           border-style: solid;
                           border-color: #D23D56;
                         "
-                        >CLICK HERE TO REGISTER FOR EITHER<br/> THE LONDON OR MANCHESTER MEETINGS</a
-                      >
+                        >CLICK HERE TO REGISTER FOR EITHER<br/> THE LONDON OR MANCHESTER MEETINGS</a>
+
                     </td>
                   </tr>
 
@@ -847,7 +847,7 @@
                       "
                   >
                     <a
-                            href="https://www.nice.org.uk/guidance/gid-ta10373/documents/html-content-3"
+                            href="https://zogenix.wavecast.io/fintepla-2022/registration?utm_source=Digital&utm_medium=Email&utm_campaign=Register_interest"
                             target="_blank"
                             class="register-btn"
                             style="
@@ -942,9 +942,8 @@
                       For any medical questions, please email
                       <a
                               href="mailto:medinfo.eu@zogenix.com"
-                              style="color: #66575c; text-decoration: none"
-                      >medinfo.eu@zogenix.com</a
-                      >
+                              style="color: #66575c;"
+                      >medinfo.eu@zogenix.com</a>
                     </p>
                   </td>
                 </tr>
@@ -1045,33 +1044,6 @@
               </table>
             </td>
           </tr>
-
-
-          <tr>
-            <td
-                    class="narrow"
-                    style="
-                padding: 0;
-                padding-left: 20px;
-                padding-right: 20px;
-                padding-bottom: 15px;
-              "
-            >
-              <p
-                      class="copy"
-                      style="
-                  font-size: 12px;
-                  line-height: 25px;
-                  color: #66575c;
-                "
-              >
-                Fintepla<img src="https://storage.finervision.com/public/emailers/traingle.png" alt="triangle" />(fenfluramine) Prescribing information
-                <a style="color: #63585c;white-space: nowrap;" href="#" target="_blank">Please refer to the full Summary of Product Characteristics (SmPC) before prescribing.</a>
-              </p>
-            </td>
-          </tr>
-
-
 
           <tr>
             <td
